docs(Controllers): Translating from spanish to English
